--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p class="hero-subtitle">Powered by Advanced AI Technology</p>
             <p class="hero-description">
                 Create, personalize, and scale your digital presence with cutting-edge AI. 
-                Transform how you communicate with photorealistic avatars and voice cloning technology.
+                Transform how you communicate with your data using AI Agents and Agenic AI technology.
             </p>
             <div class="hero-buttons">
                 <a href="#demo" class="cta-button">Create Your Twin</a>
