--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 Transform how you communicate with your data using AI Agents and Agenic AI technology.
             </p>
             <div class="hero-buttons">
-                <a href="#demo" class="cta-button">Create Your Twin</a>
-                <a href="#features" class="secondary-button">Learn More</a>
+                <a href="#contact" class="cta-button">Get Consultation For Free</a>
+                <a href="#features" class="secondary-button">Know More</a>
             </div>
         </div>
     </section>
