--- a/index.html
+++ b/index.html
@@ -69,53 +69,98 @@
         <h2 class="section-title animate-on-scroll">Revolutionary AI Features</h2>
         <div class="features-grid">
             <div class="feature-card animate-on-scroll">
-                <div class="feature-icon">🎭</div>
-                <h3 class="feature-title">Photorealistic Avatars</h3>
+                <div class="feature-icon">📊</div>
+                <h3 class="feature-title">AI-Powered Analytics</h3>
                 <p class="feature-description">
-                    Create lifelike digital versions of yourself with perfect facial expressions, 
-                    gestures, and natural movements that captivate your audience.
+                    Transform raw data into actionable insights with machine learning 
+                    algorithms that predict trends and optimize business decisions in real-time.
                 </p>
+                <div class="solution-features">
+                        <span class="feature-tag">Predictive Analytics</span>
+                        <span class="feature-tag">Real-time Insights</span>
+                        <span class="feature-tag">ML Algorithms</span>
+                    </div>
             </div>
             <div class="feature-card animate-on-scroll">
-                <div class="feature-icon">🎙️</div>
-                <h3 class="feature-title">Voice Cloning</h3>
-                <p class="feature-description">
-                    Clone your voice with incredible accuracy. Speak in multiple languages 
-                    while maintaining your unique vocal characteristics and personality.
-                </p>
+                <div class="feature-icon">📄</div>
+                <h3 class="feature-title">Intelligent Document Processing</h3>
+                    <p class="feature-description">Automatically extract, classify, and process information from documents using advanced OCR and NLP technologies for seamless workflow automation.</p>
+                    <div class="solution-features">
+                        <span class="feature-tag">OCR Technology</span>
+                        <span class="feature-tag">NLP Processing</span>
+                        <span class="feature-tag">Auto Classification</span>
+                    </div>
             </div>
             <div class="feature-card animate-on-scroll">
-                <div class="feature-icon">🎬</div>
-                <h3 class="feature-title">Video Personalization</h3>
-                <p class="feature-description">
-                    Generate thousands of personalized videos in minutes. Scale your 
-                    communication while maintaining a personal touch for every recipient.
-                </p>
+                <div class="feature-icon">🤖</div>
+                <h3 class="feature-title">Conversational AI Chatbots</h3>
+                    <p class="feature-description">Deploy smart virtual assistants that understand context, learn from interactions, and provide 24/7 customer support with human-like conversations.</p>
+                    <div class="solution-features">
+                        <span class="feature-tag">Natural Language</span>
+                        <span class="feature-tag">24/7 Support</span>
+                        <span class="feature-tag">Context Aware</span>
+                    </div>
             </div>
             <div class="feature-card animate-on-scroll">
-                <div class="feature-icon">🌐</div>
-                <h3 class="feature-title">Multi-Language Support</h3>
-                <p class="feature-description">
-                    Communicate globally with support for 25+ languages. Break down 
-                    language barriers and connect with audiences worldwide.
-                </p>
+                <div class="feature-icon">📱</div>
+                <h3 class="feature-title">Power Apps Development</h3>
+                    <p class="feature-description">Build custom business applications without coding. Create mobile-friendly apps that integrate seamlessly with your existing systems and workflows.</p>
+                    <div class="solution-features">
+                        <span class="feature-tag">No-Code Platform</span>
+                        <span class="feature-tag">Mobile Ready</span>
+                        <span class="feature-tag">System Integration</span>
+                    </div>
             </div>
             <div class="feature-card animate-on-scroll">
                 <div class="feature-icon">⚡</div>
-                <h3 class="feature-title">Real-Time Generation</h3>
-                <p class="feature-description">
-                    Generate content in real-time with lightning-fast processing. 
-                    From text to personalized video in seconds, not hours.
-                </p>
+                <h3 class="feature-title">Power Automate Workflows</h3>
+                    <p class="feature-description">Streamline repetitive tasks with automated workflows that connect your favorite apps and services seamlessly, boosting productivity across teams.</p>
+                    <div class="solution-features">
+                        <span class="feature-tag">Workflow Automation</span>
+                        <span class="feature-tag">App Integration</span>
+                        <span class="feature-tag">Process Optimization</span>
+                    </div>
             </div>
             <div class="feature-card animate-on-scroll">
-                <div class="feature-icon">🔒</div>
-                <h3 class="feature-title">Enterprise Security</h3>
-                <p class="feature-description">
-                    SOC2 and ISO compliant platform ensuring your data and digital 
-                    identity are protected with industry-leading security standards.
-                </p>
+                <div class="feature-icon">📈</div>
+                <h3 class="feature-title">Power BI Analytics</h3>
+                    <p class="feature-description">Create stunning interactive dashboards and reports that turn your business data into compelling visual stories for better decision-making.</p>
+                    <div class="solution-features">
+                        <span class="feature-tag">Interactive Dashboards</span>
+                        <span class="feature-tag">Data Visualization</span>
+                        <span class="feature-tag">Business Intelligence</span>
+                    </div>
             </div>
+            <div class="feature-card animate-on-scroll">
+                <div class="feature-icon">🔄</div>
+                <h3 class="solution-title">Robotic Process Automation</h3>
+                    <p class="feature-description">Deploy software bots to handle routine tasks like data entry, invoice processing, and report generation automatically, freeing up valuable human resources.</p>
+                    <div class="solution-features">
+                        <span class="feature-tag">Software Bots</span>
+                        <span class="feature-tag">Task Automation</span>
+                        <span class="feature-tag">Process Mining</span>
+                    </div>
+            </div>
+            <div class="feature-card animate-on-scroll">
+                <div class="feature-icon">✉️</div>
+                <h3 class="solution-title">AI-Driven Email Management</h3>
+                    <p class="feature-description">Automatically categorize, respond to, and route emails based on content analysis and priority scoring to improve communication efficiency.</p>
+                    <div class="solution-features">
+                        <span class="feature-tag">Smart Categorization</span>
+                        <span class="feature-tag">Auto-Response</span>
+                        <span class="feature-tag">Priority Scoring</span>
+                    </div>
+            </div>
+            <div class="feature-card animate-on-scroll">
+                <div class="feature-icon">📦</div>
+                <h3 class="solution-title">Smart Inventory Control</h3>
+                    <p class="feature-description">Monitor stock levels, predict demand, and automatically reorder supplies to optimize inventory management and reduce operational costs.</p>
+                    <div class="solution-features">
+                        <span class="feature-tag">Demand Prediction</span>
+                        <span class="feature-tag">Auto Reordering</span>
+                        <span class="feature-tag">Cost Optimization</span>
+                    </div>
+            </div>                        
         </div>
     </section>
 
@@ -123,11 +168,11 @@
     <section class="avatar-section" id="technology">
         <div class="avatar-container">
             <div class="avatar-content animate-on-scroll">
-                <h2>See Your Digital Twin in Action</h2>
+                <h2>See Your AI Agents in Action</h2>
                 <p>
-                    Experience the future of digital communication. Our advanced AI creates 
-                    photorealistic avatars that look, sound, and move just like you. 
-                    Perfect lip-sync, natural expressions, and your authentic voice.
+                    Experience the future of digital communication. 
+                    Witness how our AI agents transform your daily operations by handling customer inquiries, processing data, and streamlining workflows. 
+                    See the immediate impact on productivity and efficiency with interactive demos.
                 </p>
                 <p>
                     From personalized marketing videos to customer support, educational content 
