--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     Transform raw data into actionable insights with machine learning 
                     algorithms that predict trends and optimize business decisions in real-time.
                 </p>
-                <div class="solution-features">
+                <br><div class="solution-features">
                         <span class="feature-tag">Predictive Analytics</span>
                         <span class="feature-tag">Real-time Insights</span>
                         <span class="feature-tag">ML Algorithms</span>
@@ -85,7 +85,7 @@
                 <div class="feature-icon">📄</div>
                 <h3 class="feature-title">Intelligent Document Processing</h3>
                     <p class="feature-description">Automatically extract, classify, and process information from documents using advanced OCR and NLP technologies for seamless workflow automation.</p>
-                    <div class="solution-features">
+                    <br><div class="solution-features">
                         <span class="feature-tag">OCR Technology</span>
                         <span class="feature-tag">NLP Processing</span>
                         <span class="feature-tag">Auto Classification</span>
@@ -95,7 +95,7 @@
                 <div class="feature-icon">🤖</div>
                 <h3 class="feature-title">Conversational AI Chatbots</h3>
                     <p class="feature-description">Deploy smart virtual assistants that understand context, learn from interactions, and provide 24/7 customer support with human-like conversations.</p>
-                    <div class="solution-features">
+                    <br><div class="solution-features">
                         <span class="feature-tag">Natural Language</span>
                         <span class="feature-tag">24/7 Support</span>
                         <span class="feature-tag">Context Aware</span>
@@ -105,7 +105,7 @@
                 <div class="feature-icon">📱</div>
                 <h3 class="feature-title">Power Apps Development</h3>
                     <p class="feature-description">Build custom business applications without coding. Create mobile-friendly apps that integrate seamlessly with your existing systems and workflows.</p>
-                    <div class="solution-features">
+                    <br><div class="solution-features">
                         <span class="feature-tag">No-Code Platform</span>
                         <span class="feature-tag">Mobile Ready</span>
                         <span class="feature-tag">System Integration</span>
@@ -115,7 +115,7 @@
                 <div class="feature-icon">⚡</div>
                 <h3 class="feature-title">Power Automate Workflows</h3>
                     <p class="feature-description">Streamline repetitive tasks with automated workflows that connect your favorite apps and services seamlessly, boosting productivity across teams.</p>
-                    <div class="solution-features">
+                    <br><div class="solution-features">
                         <span class="feature-tag">Workflow Automation</span>
                         <span class="feature-tag">App Integration</span>
                         <span class="feature-tag">Process Optimization</span>
@@ -125,7 +125,7 @@
                 <div class="feature-icon">📈</div>
                 <h3 class="feature-title">Power BI Analytics</h3>
                     <p class="feature-description">Create stunning interactive dashboards and reports that turn your business data into compelling visual stories for better decision-making.</p>
-                    <div class="solution-features">
+                    <br><div class="solution-features">
                         <span class="feature-tag">Interactive Dashboards</span>
                         <span class="feature-tag">Data Visualization</span>
                         <span class="feature-tag">Business Intelligence</span>
@@ -135,7 +135,7 @@
                 <div class="feature-icon">🔄</div>
                 <h3 class="solution-title">Robotic Process Automation</h3>
                     <p class="feature-description">Deploy software bots to handle routine tasks like data entry, invoice processing, and report generation automatically, freeing up valuable human resources.</p>
-                    <div class="solution-features">
+                    <br><div class="solution-features">
                         <span class="feature-tag">Software Bots</span>
                         <span class="feature-tag">Task Automation</span>
                         <span class="feature-tag">Process Mining</span>
@@ -145,7 +145,7 @@
                 <div class="feature-icon">✉️</div>
                 <h3 class="solution-title">AI-Driven Email Management</h3>
                     <p class="feature-description">Automatically categorize, respond to, and route emails based on content analysis and priority scoring to improve communication efficiency.</p>
-                    <div class="solution-features">
+                    <br><div class="solution-features">
                         <span class="feature-tag">Smart Categorization</span>
                         <span class="feature-tag">Auto-Response</span>
                         <span class="feature-tag">Priority Scoring</span>
@@ -155,7 +155,7 @@
                 <div class="feature-icon">📦</div>
                 <h3 class="solution-title">Smart Inventory Control</h3>
                     <p class="feature-description">Monitor stock levels, predict demand, and automatically reorder supplies to optimize inventory management and reduce operational costs.</p>
-                    <div class="solution-features">
+                    <br><div class="solution-features">
                         <span class="feature-tag">Demand Prediction</span>
                         <span class="feature-tag">Auto Reordering</span>
                         <span class="feature-tag">Cost Optimization</span>
