--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <video class="video-bg" autoplay muted loop>
             <source src="data:video/mp4;base64,AAAAIGZ0eXBpc29tAAACAGlzb21pc28yYXZjMW1wNDEAAAAIZnJlZQAACKBtZGF0AAAC" type="video/mp4">
         </video>
+
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1 class="hero-title">Transform Your Business with AdoptDX</h1>
@@ -177,9 +178,10 @@
                 <a href="#demo" class="cta-button">Try It Now</a>
             </div>
             <div class="avatar-video animate-on-scroll">
-                <video autoplay muted loop>
-                    <source src="data:video/mp4;base64,AAAAIGZ0eXBpc29tAAACAGlzb21pc28yYXZjMW1wNDEAAAAIZnJlZQAACKBtZGF0AAAC" type="video/mp4">
-                </video>
+        <video controls>
+            <source src="Video&Images/AI Agents.mp4" type="video/mp4">
+        </video>
+        
             </div>
         </div>
     </section>
