--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Digital Twin - AI Revolution</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="Video&Images/favicon_io/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="Video&Images/favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="Video&Images/favicon_io/favicon-16x16.png">
+<link rel="manifest" href="Video&Images/favicon_io/site.webmanifest">
 </head>
 <body>
     <!-- Floating Particles -->
@@ -375,13 +379,13 @@
     <footer class="footer" id="contact">
         <div class="footer-content">
             <div class="footer-links">
-                <a href="#privacy">Privacy Policy</a>
+              <!--   <a href="#privacy">Privacy Policy</a>
                 <a href="#terms">Terms of Service</a>
                 <a href="#api">API Documentation</a>
                 <a href="#support">Support</a>
                 <a href="#careers">Careers</a>
-            </div>
-            <p>&copy; 2025 Digital Twin AI. Building the future of human representation.</p>
+            </div>-->
+            <p>&copy; 2025 AdoptDX. Building the future of human representation.</p>
         </div>
     </footer>
 
