--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     Witness how our AI agents transform your daily operations by handling customer inquiries, processing data, and streamlining workflows. 
                     See the immediate impact on productivity and efficiency with interactive demos.
                 </p>
-                <a href="#demo" class="cta-button">Try It Now</a>
+                <a href="#contact" class="cta-button">Get your First AI Agents Now</a>
             </div>
             <div class="avatar-video animate-on-scroll">
         <video controls>
