--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -36,6 +36,16 @@
                 </div>
             </div>
         </nav>
+            <!-- Mobile Menu -->
+        <div class="mobile-menu" id="mobileMenu">
+            <a href="#home">Home</a>
+            <a href="Pages/Services.html">Services</a>
+            <a href="#features">Features</a>
+            <a href="#technology">Technology</a>
+            <a href="#about">About Us</a>
+            <a href="#contact">Contact</a>
+            <a href="#contact" class="cta-button" style="margin-top: 20px; text-align: center;">Request Demo</a>
+        </div>
     </header>
 
     <!-- Main Content -->
@@ -249,3 +259,4 @@
     <script src=..\Pages\services.js></script>
 </body>
 </html>
+
