--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -38,12 +38,12 @@
         </nav>
             <!-- Mobile Menu -->
         <div class="mobile-menu" id="mobileMenu">
-            <a href="#home">Home</a>
+            <a href="../index.html#home">Home</a>
             <a href="Pages/Services.html">Services</a>
-            <a href="#features">Features</a>
-            <a href="#technology">Technology</a>
-            <a href="#about">About Us</a>
-            <a href="#contact">Contact</a>
+            <a href="../index.html#features">Features</a>
+            <a href="../index.html#technology">Technology</a>
+            <a href="../index.html#about">About Us</a>
+            <a href="../index.html#contact">Contact</a>
             <a href="#contact" class="cta-button" style="margin-top: 20px; text-align: center;">Request Demo</a>
         </div>
     </header>
@@ -259,4 +259,5 @@
     <script src=..\Pages\services.js></script>
 </body>
 </html>
+
 
