Added link to logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav">
-            <div class="logo">AdoptDX</div>
+           <a href="#home"> <div class="logo">AdoptDX</div></a>
             <div class="nav-right">
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
