--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -18,7 +18,7 @@
     <!-- Header -->
 <header class="header" id="header">
         <nav class="nav">
-            <div class="logo">AdoptDX</div>
+           <a href="../index.html#home"> <div class="logo">AdoptDX</div></a>
             <div class="nav-right">
                 <ul class="nav-links">
                     <li><a href="../index.html#home">Home</a></li>
