added  style="text-decoration: none;" in correct place

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav">
-           <a href="#home"> <div class="logo" style="text-decoration: none;">AdoptDX</div></a>
+           <a href="#home"  style="text-decoration: none;"> <div class="logo">AdoptDX</div></a>
             <div class="nav-right">
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
