--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 
                 <!-- Right Side - Contact Form -->
                 <div class="contact-form animate-on-scroll">
-                    <form id="contactForm" action="https://formsubmit.co/el/weyoho" method="POST">
+                    <form id="contactForm" action="https://formsubmit.co/adoptdx.sales@gmail.com" method="POST">
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="firstName">First Name *</label>
