removed / from auto response

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                             <textarea id="message" name="message" required placeholder="Describe your project, goals, and how you'd like to use digital twin technology..."></textarea>
                         </div>
                         <input type="hidden" name="_next" value="https://adoptdx.com/index.html">
-                        <input type="hidden" name="_autoresponse" value="Thank you for your message! We\'ll get back to you within 24 hours.">
+                        <input type="hidden" name="_autoresponse" value="Thank you for your message! We'll get back to you within 24 hours.">
                         <input type="hidden" name="_template" value="table">
                         <div class="form-submit">
                             <button type="submit" class="submit-button">Send Message</button>
