--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="Video&Images/favicon_io/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="Video&Images/favicon_io/favicon-16x16.png">
 <link rel="manifest" href="Video&Images/favicon_io/site.webmanifest">
+<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-NSND9DZC8Y"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-NSND9DZC8Y'); </script>
 </head>
 <body>
     <!-- Floating Particles -->
