--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -22,7 +22,7 @@
             <div class="nav-right">
                 <ul class="nav-links">
                     <li><a href="../index.html#home">Home</a></li>
-                    <li><a href="Pages/Services.html">Services</a></li>
+                    <li><a href="Services.html">Services</a></li>
                     <li><a href="../index.html#features">Features</a></li>
                     <li><a href="../index.html#technology">Technology</a></li>
                     <li><a href="../index.html#about">About Us</a></li>
@@ -39,7 +39,7 @@
             <!-- Mobile Menu -->
         <div class="mobile-menu" id="mobileMenu">
             <a href="../index.html#home">Home</a>
-            <a href="Pages/Services.html">Services</a>
+            <a href="Services.html">Services</a>
             <a href="../index.html#features">Features</a>
             <a href="../index.html#technology">Technology</a>
             <a href="../index.html#about">About Us</a>
