added new features  and adoptdx

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <!-- About Us Section -->
 <section class="about-section" id="about">
     <div class="about-container animate-on-scroll">
-        <h2 class="section-title">About Us</h2>
+        <h2 class="section-title">Why Choose AdoptDX?</h2>
         <h3 class="about-tagline">AdoptDX – Your Partner in AI and RPA Automation</h3>
         <div class="about-content">
             <!-- Left: Text -->
@@ -242,19 +242,35 @@
                 <div class="about-highlights">
                     <div class="about-highlight">
                         <span class="about-icon">🤖</span>
-                        <span>Cutting-edge AI Research</span>
+                        <span>AI Agent Development & Deployment</span>
                     </div>
                     <div class="about-highlight">
-                        <span class="about-icon">🌍</span>
-                        <span>Global Impact</span>
+                        <span class="about-icon">⚙️</span>
+                        <span>Robotic Process Automation (RPA)</span>
                     </div>
                     <div class="about-highlight">
-                        <span class="about-icon">💡</span>
-                        <span>Innovation Driven</span>
+                        <span class="about-icon">📊</span>
+                        <span>Machine Learning & Predictive Analytics</span>
+                    </div>
+                    <div class="about-highlight">
+                        <span class="about-icon">📄</span>
+                        <span>Document Processing & OCR</span>
+                    </div>
+                    <div class="about-highlight">
+                        <span class="about-icon">⚡</span>
+                        <span>Workflow Automation</span>
+                    </div>
+                    <div class="about-highlight">
+                        <span class="about-icon">🛠️</span>
+                        <span>Custom Application Development</span>
+                    </div>
+                    <div class="about-highlight">
+                        <span class="about-icon">📈</span>
+                        <span> Digital Transformation Strategy</span>
                     </div>
                     <div class="about-highlight">
                         <span class="about-icon">🤝</span>
-                        <span>Customer Focused</span>
+                        <span>24/7 Technical Support</span>
                     </div>
                 </div>
             </div>
