--- a/index.html
+++ b/index.html
@@ -238,43 +238,42 @@
                 </p>
             </div>
             <!-- Right: Highlights Boxes -->
-            <div class="about-right">
-                                <div class="about-highlights">
-                                                    <div class="about-highlight">
-                                                                            <span class="about-icon">🤖</span>
-                                                                                                    <span>AI Agent Development & Deployment</span>
-                                                                                                                        </div>
-                                                                                                                                            <div class="about-highlight">
-                                                                                                                                                                    <span class="about-icon">⚙️</span>
-                                                                                                                                                                                            <span>Robotic Process Automation (RPA)</span>
-                                                                                                                                                                                                                </div>
-                                                                                                                                                                                                                                    <div class="about-highlight">
-                                                                                                                                                                                                                                                            <span class="about-icon">📊</span>
-                                                                                                                                                                                                                                                                                    <span>Machine Learning & Predictive Analytics</span>
-                                                                                                                                                                                                                                                                                                        </div>
-                                                                                                                                                                                                                                                                                                                            <div class="about-highlight">
-                                                                                                                                                                                                                                                                                                                                                    <span class="about-icon">📄</span>
-                                                                                                                                                                                                                                                                                                                                                                            <span>Document Processing & OCR</span>
-                                                                                                                                                                                                                                                                                                                                                                                                </div>
-                                                                                                                                                                                                                                                                                                                                                                                                                    <div class="about-highlight">
-                                                                                                                                                                                                                                                                                                                                                                                                                                            <span class="about-icon">⚡</span>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                    <span>Workflow Automation</span>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        </div>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            <div class="about-highlight">
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    <span class="about-icon">🛠️</span>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            <span>Custom Application Development</span>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                </div>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    <div class="about-highlight">
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            <span class="about-icon">📈</span>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    <span> Digital Transformation Strategy</span>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        </div>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            <div class="about-highlight">
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    <span class="about-icon">🤝</span>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            <span>24/7 Technical Support</span>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                </div>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                </div>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            </div>
+<div class="about-right">
+    <div class="about-highlights">
+        <div class="about-highlight">
+            <span class="about-icon">🤖</span>
+            <span>AI Agent Development & Deployment</span>
         </div>
+        <div class="about-highlight">
+            <span class="about-icon">⚙️</span>
+            <span>Robotic Process Automation (RPA)</span>
+        </div>
+        <div class="about-highlight">
+            <span class="about-icon">📊</span>
+            <span>Machine Learning & Predictive Analytics</span>
+        </div>
+        <div class="about-highlight">
+            <span class="about-icon">📄</span>
+            <span>Document Processing & OCR</span>
+        </div>
+        <div class="about-highlight">
+            <span class="about-icon">⚡</span>
+            <span>Workflow Automation</span>
+        </div>
+        <div class="about-highlight">
+            <span class="about-icon">🛠️</span>
+            <span>Custom Application Development</span>
+        </div>
+        <div class="about-highlight">
+            <span class="about-icon">📈</span>
+            <span>Digital Transformation Strategy</span>
+        </div>
+        <div class="about-highlight">
+            <span class="about-icon">🤝</span>
+            <span>24/7 Technical Support</span>
+        </div>
+    </div>
+</div>
     </div>
 </section>
 
@@ -284,7 +283,7 @@
         <div class="contact-container">
             <h2 class="section-title animate-on-scroll">Get In Touch</h2>
             <p style="text-align: center; font-size: 18px; opacity: 0.8; margin-bottom: 50px;" class="animate-on-scroll">
-                Ready to create your digital twin? Let's discuss how our AI technology can transform your business.
+                Ready to create your AI Technology? Let's discuss how our AI technology can transform your business.
             </p>
             
             <div class="contact-content">
@@ -292,7 +291,7 @@
                 <div class="contact-left animate-on-scroll">
                     <h3>Let's Start a Conversation</h3>
                     <p>
-                        We're here to help you explore the possibilities of AI-powered digital twins. 
+                        We're here to help you explore the possibilities of AI-powered technologies. 
                         Whether you're looking to enhance your marketing, improve customer engagement, 
                         or revolutionize your communication strategy, our team is ready to assist.
                     </p>
@@ -379,7 +378,7 @@
                         
                         <div class="form-group">
                             <label for="message">Tell us about your project *</label>
-                            <textarea id="message" name="message" required placeholder="Describe your project, goals, and how you'd like to use digital twin technology..."></textarea>
+                            <textarea id="message" name="message" required placeholder="Describe your project, goals, and how you'd like to use AI technology..."></textarea>
                         </div>
                         <input type="hidden" name="_next" value="https://adoptdx.com/index.html">
                         <input type="hidden" name="_autoresponse" value="Thank you for your message! We'll get back to you within 24 hours.">
