added correct favicon

--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -6,10 +6,10 @@
     <title>AdoptDX</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="../Pages/services.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="Video&Images/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Video&Images/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Video&Images/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="Video&Images/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="../Video&Images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Video&Images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../Video&Images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../Video&Images/favicon_io/site.webmanifest">
 </head>
 <body>
     <!-- Floating Particles -->
