--- a/Jobs/PostJobs.html
+++ b/Jobs/PostJobs.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="Video&Images/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Video&Images/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Video&Images/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="Video&Images/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="../Video&Images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Video&Images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../Video&Images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../Video&Images/favicon_io/site.webmanifest">
     <title>AdoptDX Careers - Admin Dashboard</title>
     <style>
         * {
