--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -673,7 +673,7 @@
                 renderJobs();
             } catch (error) {
                 console.error('Error loading jobs:', error);
-                showError('Unable to load job listings.');
+                showError('Unable to load job listings.Please try after sometime.');
             }
         }
 
