--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -582,7 +582,7 @@
                 </div>
                 <div class="form-group">
                     <label for="coverLetter">Why are you interested in this role?</label>
-                    <textarea id="coverLetter" name="coverLetter" required placeholder="Tell us about your passion for AI/automation and why you'd be a great fit..."></textarea>
+                    <textarea id="coverLetter" name="coverLetter" required placeholder="Tell us about your passion for this role and why you'd be a great fit..."></textarea>
                 </div>
                 <div class="form-group">
                     <label for="resume">Resume/CV *</label>
